Movielist: Fix link contrast in dark mode in default table

--- a/apps/movielist/assets/css/_table.scss
+++ b/apps/movielist/assets/css/_table.scss
@@ -22,7 +22,10 @@ tbody{
 
     .default-table tbody{
 		background-color: #666;
-		color: #ddd;
+
+		&, a {
+			color: #ddd;
+		}
 	}
 }
 
